<resources>
    <string name="app_name">AdoptApp</string>
    <string name="botonIngresar">Ingresar</string>
    <string name="botonRegistrarse">Crear cuenta</string>
    <string name="descripcionImagenLogo">Logo de AdoptApp</string>
    <string name="hintEmail">Correo electrónico</string>
    <string name="hintContrasena">Contraseña</string>
    <string name="botonFacebook">Ingresar con Facebook</string>
    <string name="botonTwitter">Ingresar con Twitter</string>
    <string name="botonGoogle">Ingresar con Google</string>
    <string name="descripcionImagenAdoptante">Adoptante</string>
    <string name="descripcionImagenHogarPaso">Hogar de paso</string>
    <string name="entrarComoAdoptante">Ingresar como adoptante/patrocinador/donante/voluntario</string>
    <string name="entrarComoHogarPaso">Ingresar como hogar de paso</string>
    <string name="botonReporteRapido">Realizar reporte rápido</string>
    <string name="botonBuscarAnimales">Buscar animales</string>
    <string name="botonVerEventos">Ver eventos</string>
    <string name="botonBuscarInstituciones">Buscar fundaciones/refugios</string>
    <string name="botonVerHistoriasFelices">Ver historias felices</string>
    <string name="botonEditarPerfil">Editar perfil</string>
    <string name="botonCerrarSesion">Cerrar sesión</string>
    <string name="descripcionImagenAnimal">Animal</string>
    <string name="nombreAnimal">Nombre</string>
    <string name="detallesAnimal">Tamano\nEdad\nCiudad, departamento</string>
    <string name="descripcionImagenFiltro">Filtro</string>
    <string name="botonRegistrarAnimal">Registrar animal</string>
    <string name="botonVerMisAnimales">Ver mis animales</string>
    <string name="botonVerPeticiones">Ver solicitudes</string>
    <string name="botonEventos">Eventos</string>
    <string name="hintEdad">Edad</string>
    <string-array name="TipoAnimal">
        <item>Tipo de animal</item>
        <item>Perro</item>
        <item>Gato</item>
        <item>Ave doméstica</item>
        <item>Conejo</item>
        <item>Hámster</item>
        <item>Caballo</item>
    </string-array>
    <string name="hintPeso">Peso</string>
    <string-array name="TamanoAnimal">
        <item>Tamaño de animal</item>
        <item>Pequeño</item>
        <item>Mediano</item>
        <item>Grande</item>
        <item>Muy grande</item>
    </string-array>
    <string-array name="SexoAnimal">
        <item>Sexo de animal</item>
        <item>Hembra</item>
        <item>Macho</item>
    </string-array>
    <string name="botonContinuar">Continuar</string>
    <string name="botonAplicarFiltro">Aplicar filtro</string>
    <string name="distanciaFiltro">Distancia máx. desde mi ubicación (en km)</string>
    <string name="mostrarCargando">Cargando resultados</string>
    <string name="resultadosNoEncontrados">No hay resultados</string>
    <string name="botonAdoptar">Adoptar</string>
    <string name="botonApadrinar">Apadrinar</string>
    <string name="botonHacerDonacion">Ofrecer donación</string>
    <string name="nombreAnimalPerfil">Nombre animal</string>
    <string name="AvisoNoConexion">No hay conexión</string>
    <string name="textDescriptores">Descriptores de comportamiento</string>
    <string name="Alegre">Alegre</string>
    <string name="Calmado">Calmado</string>
    <string name="Jugueton">Juguetón</string>
    <string name="Comelon">Comelón</string>
    <string name="Timido">Tímido</string>
    <string name="Ansioso">Ansioso</string>
    <string name="Energetico">Energético</string>
    <string name="Fuerte">Fuerte</string>
    <string name="Empatico">Empático</string>
    <string name="Ninos">Compatible con niños</string>
    <string name="Destructivo">Destructivo</string>
    <string name="Agresivo">Agresivo</string>
    <string name="Amoroso">Amoroso</string>
    <string name="Independiente">Independiente</string>
    <string name="Nervioso">Nervioso</string>
    <string name="Dominante">Dominante</string>
    <string name="Leal">Leal</string>
    <string name="NecesidadesEspeciales">Con necesidades físicas especiales (p.ej. discapacidad)</string>
    <string-array name="CategoriaEdad">
        <item>Categoría edad</item>
        <item>Años</item>
        <item>Meses</item>
    </string-array>
    <string-array name="TipoDocumento">
        <item>Cedula de ciudadanía</item>
        <item>Tarjeta de identidad</item>
        <item>Cedula de extranjería</item>
    </string-array>
    <string name="registroPersona">Registro de persona</string>
    <string name="cargarFoto">Cargar foto</string>
    <string name="descripcionBotonCamara">Permite acceder a la camara</string>
    <string name="descripcionBotonGaleria">Permite acceder a la galeria</string>
    <string name="descripcionImagenPredefinida">Imagen predefinida</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="hintConfirmarContraseña">Confirmar contraseña</string>
    <string name="hintTipoDocumento">Tipo de documento</string>
    <string name="hintNumeroDocumento">Numero de documento</string>
    <string name="hintTelefono">Teléfono</string>
    <string name="hintCiudad">Ciudad, Departamento</string>
    <string name="hintDireccion">Dirección</string>
    <string name="genero">Género</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="botonRegistrarsePersona">Registrarse</string>
    <string name="registrarFundacion">Registrar fundación</string>
    <string name="nombreFundacion">Nombre de la fundación</string>
    <string name="descripcion">Descripción</string>
    <string name="botonregistrarFundacion">Registrar</string>
    <string name="descripcionFundacion">Agregue una descripción de su fundación (misión, visión)</string>
    <string name="registrarAnimal1">Datos básicos del animal</string>
    <string name="hintTipoAnimal">Tipo de animal</string>
    <string name="registrarComoAdoptante">Registrarse como adoptante/patrocinador/donante/voluntario</string>
    <string name="registrarComoHogarPaso">Registrarse como hogar de paso</string>

    <string name="nombre_item_institucion">Nombre de la institución</string>
    <string name="imagen_item_institucion">Foto de la institución</string>
    <string name="detallesInstitucion">Ciudad, Departamento\nEncargado</string>
    <string name="voluntariado">Ofrecer voluntariado</string>
    <string name="iniciar_chat">Iniciar chat</string>

    <string name="reporte_rapido">Reporte rápido</string>
    <string name="hacer_reporte_rapido">Registrar reporte</string>
    <string name="CargarFoto">Cargar foto</string>
    <string name="TomarFoto">Tomar foto</string>
    <string name="foto_reporte_rapido">Foto reporte</string>
    <string name="descripcion_reporte_rapido">Descripción</string>
    <string name="ubicacion_reporte_rapido">Ubicación</string>
    <string name="campo_obligatorio">Campo obligatorio</string>

    <string name="ver_reportes">Ver reportes</string>
    <string name="title_activity_maps">Map</string>

    <string name="hacer_solicitud">Realizar solicitud</string>
    <string name="descripcion_solicitud">Descripción de la solicitud</string>
    <string name="monto_apadrinamiento">Monto apadrinamiento</string>
    <string name="monto_apadrinamiento2">Monto mensual ofrecido</string>

    <string name="rechazar_solicitud">Rechazar</string>
    <string name="aceptar_solicitud">Aceptar</string>
    <string name="recoger_animal">Ve por tu adoptado</string>

    <string name="ver_datos_solicitante">Ver perfil solicitante</string>
    <string name="nombre_persona">Nombre de la persona</string>
    <string name="formalizacion_adopcion">Formaliza la adopción</string>
    <string name="btn_formalizacion_adopcion">Formalizar</string>

    <string name="solicitudes_aceptadas">Ver solicitudes aceptadas</string>
    <string name="titulo_evento">Registro de evento</string>
    <string name="fecha_evento">Fecha del evento (dd/mm/aaaa)</string>
    <string name="formato_fecha">dd/mm/aaaa</string>
    <string name="titulo_evento1">Título del evento</string>
    <string name="direccion_evento">Dirección del evento</string>
    <string name="registrar_evento">Registrar evento</string>
    <string name="eventos">Registrar evento</string>
    <string name="hora_inicio">Hora inicio (hh:mm)</string>
    <string name="hora_fin">Hora fin (hh:mm)</string>

    <string name="marcar_hecho">Confirmar entrega/participación</string>
    <string name="direcciones_llave">AIzaSyDpGyB6R7frdklz4tQsykJspZ4rQXq6lhY</string>

</resources>
