<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textRegistroPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registroPersona"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"
        android:background="@drawable/roundcornercolorprimario"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textCargarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/cargarFoto"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/imageButtonCamera"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageButtonGallery"
                    app:layout_constraintStart_toEndOf="@+id/textCargarFoto"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/camera"
                    android:contentDescription="@string/descripcionBotonCamara"
                    android:focusable="true" />

                <ImageButton
                    android:id="@+id/imageButtonGallery"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="8dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gallery"
                    android:contentDescription="@string/descripcionBotonGaleria" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageViewPredefinida"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="#3C3F41"
                tools:srcCompat="@tools:sample/avatars[0]"
                android:contentDescription="@string/descripcionImagenPredefinida" />

            <EditText
                android:id="@+id/editTextNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nombres"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/apellidos"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/hintEmail"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/hintContrasena"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextConfirmarContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/hintConfirmarContraseña"
                android:importantForAutofill="no" />

            <Spinner
                android:id="@+id/spinnerDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/TipoDocumento"
                android:hint="@string/hintTipoDocumento"/>

            <EditText
                android:id="@+id/editTextNumeroDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:importantForAutofill="no"
                android:hint="@string/hintNumeroDocumento"/>

            <EditText
                android:id="@+id/editTextTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:importantForAutofill="no"
                android:hint="@string/hintTelefono"/>

            <EditText
                android:id="@+id/editTextCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hintCiudad"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hintDireccion"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textViewGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/genero"
                android:textSize="18sp"/>

            <RadioGroup
                android:id="@+id/radioGroupGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/radioButtonHombre"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hombre" />
                <RadioButton
                    android:id="@+id/radioButtonMujer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mujer"/>
            </RadioGroup>

            <Button
                android:id="@+id/buttonRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcornercolorprimario"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/botonRegistrarsePersona"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>



