<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ActivityPerfilInstitucion"
    android:padding="10dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80"/>

    <TextView
        android:id="@+id/tv_perfil_nombre_solicitud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundcornercolorprimario"
        android:gravity="center_horizontal"
        android:text="@string/nombre_item_institucion"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sv_perfil_solicitud"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_perfil_solicitud"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_perfil_nombre_solicitud">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_perfil_foto_solicitud"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:contentDescription="@string/imagen_item_institucion"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/cargando_imagen" />

            <TextView
                android:id="@+id/tv_perfil_datos_solicitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/descripcion_solicitud" />

            <Button
                android:id="@+id/btn_perfil_solicitante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ver_datos_solicitante"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_aceptar_solicitud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundcornercolorprimario"
        android:text="@string/aceptar_solicitud"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_rechazar_solicitud"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/btn_rechazar_solicitud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundcornerrojo"
        android:text="@string/rechazar_solicitud"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_aceptar_solicitud"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        android:layout_marginStart="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>